myapp-helm/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccount: webapp-sa
      serviceAccountName: webapp-sa
      containers:
      - image: "docker.io/raakatz/flask-vault:mongodb"
        name: webapp
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: flask
        readinessProbe:
          httpGet:
            path: /register
            port: flask
          periodSeconds: 3
